test/libsolidity/syntaxTests/parsing/event_with_no_argument_list.sol
contract c {
	event e;
}
// ----
// ParserError: (21-21): Expected '(' but got ';'
